data/derived/sp14/progs/unify/prog2504.ml.out
Characters 105-108:
  else ((n mod 10) :: ( xxx (n / 10)))
                        ^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
